+ | SML | Tweak/meta-head-tag -- Added meta tags in head that make it prettier in my linkedin worksamples

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Parks & Parking" />
+    <meta name="image" property="og:image" content="./ParksAndParking.png" />
+    <meta name="author" content="Dylan Scott" />
+    <meta
+      property="og:description"
+      content="A web-map illustrating the city-space dedicated to people vs unused cars in Tucson"
+    />
     <title>Parks & Parking</title>
     <meta
       name="viewport"
