+ | SML | Hotfix -- typo fixed... again.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="Parks & Parking" />
-    <meta name="image" property="og:image" content="/ParksAndParking.png" />
+    <meta name="image" property="og:image" content="ParksAndParking.png" />
     <meta name="author" content="Dylan Scott" />
     <meta
       property="og:description"
